# textrush

./: README.md  pyproject.toml  requirements.txt
example/: example_1.py  example_2.py  example_3.py  example_4.py
rust/: Cargo.toml
rust/src/: base.rs  core.rs  lib.rs  shared.rs  shared_bak.rs
rust/src/versions/: lib_v0_0_2.rs
scratch/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_list_keywords.py
src/textrush/: __init__.py  base.py  core.py  librush.pyi  versions.py
tests/: _test_kp_exceptions.py  _test_kp_next_word.py  benchmark.py  benchmark_data.py  benchmark_flashtext.py  benchmark_flashtext2.py  benchmark_markdown.py  test_dictionary_loading.py  test_example_1.py  test_example_2.py  test_example_3.py  test_example_4.py  test_extractor.py  test_file_load.py  test_fuzzy_search.py  test_kp_extract_span.py  test_kp_get_all_keywords.py  test_kp_len.py  test_kp_term_in_kp.py  test_loading_keyword_list.py  test_multilingual.py  test_overlapping_keywords.py  test_remove_keywords.py  test_sinhala.py  test_special_characters.py  test_unicode_symbols.py
tests/benchmark_results/: benchmark_result_0.0.2_20241124_162435.json  benchmark_result_0.0.4-dev_20241129_120300.json  benchmark_result_flashtext2_20241126_222522.json  benchmark_result_flashtext_20241126_222304.json  benchmark_result_latest_20241124_162512.json  benchmark_result_latest_20241126_221011.json  benchmark_results.md
