[package]
name = "textrush"
version = "0.0.3"
edition = "2021"

[lib]
name = "textrush"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
fxhash = "0.2.1"
unicase = "2.7.0"
unicode-segmentation = "1.10.1"

[dependencies.pyo3]
version = "0.21.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
